Fix some styling around placeholdes. Make sure when a root gets deleted we collapse the space
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@16194 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_profiles.scss
+++ b/src/main/resources/scss/_profiles.scss
@@ -361,6 +361,16 @@
 					text-decoration: underline;
 				}
 			}
+
+			&.deleted-reply{
+				.item-spacer{
+					min-height: 0;
+				}
+				.controls{
+					display: none;
+				}
+			}
+
 			.item {
 				&.reveal { top: 120px; }
 				@include experimental(transition, top 0.7s ease);
@@ -498,6 +508,10 @@
 				color: $primary-grey;
 				margin-top: 5px;
 				font: normal 500 14px/20px $font;
+			}
+
+			&.deleted-reply{
+				controls: display:none;
 			}
 
 			&.editor-active {
